--- a/app-client-android/src/main/res/values/themes.xml
+++ b/app-client-android/src/main/res/values/themes.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.MyTeamPlayer" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.MyTeamPlayer" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="android:statusBarColor">@android:color/black</item>
+    </style>
 </resources>
