--- a/app-tv-server/src/main/res/values/colors.xml
+++ b/app-tv-server/src/main/res/values/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="ic_banner_background">#2E3032</color>
     <color name="ic_launcher_background">#2C2C2C</color>
+    <color name="ic_logo">#FFBD5A</color>
 </resources>
